Shoring up some display issue with teh global nav, homepage content, icon misalignment.

--- a/src/assets/scss/core/forms/_forms.scss
+++ b/src/assets/scss/core/forms/_forms.scss
@@ -91,3 +91,7 @@ label {
 .dropdown-toggle {
   padding: $btn-padding-y $btn-padding-x;
 }
+
+.form-text.icon {
+  display: inline;
+}
